Зацеплены данные к индивидуальным страницам истории

--- a/content/history/1.md
+++ b/content/history/1.md
@@ -3,4 +3,4 @@ date: "13 – 15 Ноября 2020г."
 heading: "Цифровой прорыв. Северо-западный <br/> IT–хаб"
 description: '<p>За два дня представили рабочий прототип решения: "Система управления профессиональным образованием". Разработали с командой информационную среду для абитуриентов...</p>'
 ---
-<p>Бла бла бла бла бла</p>
+<p>Фрэнсис Хетлинг (англ. Francis Hetling) — 123 не существовавший пионер фотоискусства ранней Викторианской эпохи, под именем которого британский художник-руралист (англ.)русск. Грэм Овенден и фотограф Говард Грей (англ.)русск. экспонировали в Национальной портретной галерее в Лондоне на выставке в июле 1974 года и продавали созданные ими снимки-мистификации в стиле и технике фотографий XIX века. В 1980 году против Овендена и Грея был возбуждён судебный иск. Официальная формулировка иска звучала как «сговор [Грея и Овендена] между 1974 и 1978 годами с целью получения собственности обманным путём». В ходе судебного процесса выяснилось, что оба участника мистификации причастны к появлению фотографий Хетлинга. Грей отвечал за техническую сторону создания фотографий, а Овенден придал им внешний вид ранних викторианских калотипов. Овенден заявил в суде, что цель мистификации заключалась не в получении крупной суммы денег, а в том, чтобы «показать истинный уровень тех, кто занимается искусством, тех, кто объявляет себя экспертами, ничего не зная, [и] тех, кто получает прибыль, превращая эстетические ценности в финансовые». Грей и Овенден были оправданы решением коллегии присяжных. Судебный процесс широко освещался в средствах массовой информации Великобритании и анализируется в научных и научно-популярных работах, посвящённых фальсификации произведений искусства.</p>
