--- a/content/history/2.md
+++ b/content/history/2.md
@@ -1,10 +1,12 @@
 ---
-date: "27 - 29 ноября 2020г."
+date: "27 – 29 ноября 2020г."
 heading: "Цифровой прорыв. Финал"
-description: '<p>Победа в онлайн Хакатоне "Цифровой прорыв". ФИНАЛ. 27 - 29
-ноября 2020 За два дня представили рабочий прототип решения:
-"Сервис для работы с КЭП". Простой сервис электронных подписей,
-соответствующий самым свежим требованиям ФСБ по криптографии.
-Ознакомиться с результатами можно по ссылке.</p>'
+description: '<p>За два дня представили рабочий прототип решения: "Сервис для работы с КЭП".</p>'
 ---
-<p>Бла бла бла бла бла</p>
+<p>
+За два дня представили рабочий <a href="https://github.com/Restlin/russian_mail_signature">прототип</a> решения: "Сервис для работы с КЭП".</p>
+<p>
+Простой сервис электронных подписей, соответствующий самым свежим требованиям ФСБ по криптографии. <br/>
+Ознакомиться с результатами можно по <a href="https://2020.leadersofdigital.ru/event/214763/case/252377/results">ссылке.</a>
+</p>
+<p><time>27 – 29 ноября 2020г.</time></p>
